# agent-context-mpp

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
app/: articles.py  auth.py  config.py  db.py  keystore.py  main.py  models.py  mpp_setup.py  payment_currency.py  state.py  tempo_keychain.py
app/db/: __init__.py  queries.py  records.py  schema.py
app/routes/: articles.py  auth.py  context.py  health.py  publishers.py  subscriptions.py
articles/: ai-agent-payments.md  context-for-machines.md  decentralized-identity.md
docs/specs/: auth-contract.md  backend-architecture-spec.md  deployment-plan.md  frontend-spec.md  high-level-goals.md
migrations/: env.py
migrations/sql/: 0001_downgrade.sql  0001_upgrade.sql  0002_downgrade.sql  0002_upgrade.sql  0005_downgrade.sql  0005_upgrade.sql
migrations/versions/: 0001_age10_postgres_persistence.py  0002_age12_publisher_profile.py  0002_age15_purchase_recipient.py  0003_age13_article_draft_status.py  0003_age15_purchase_recipient.py  0004_age13_article_draft_status.py  0005_age16_subscription_cutover.py
scripts/: demo_testnet.sh  renew_subscriptions.py
tests/: conftest.py  test_app_metadata.py  test_article_models.py  test_article_mutations.py  test_articles.py  test_auth.py  test_config.py  test_context_route.py  test_db.py  test_keystore.py  test_publishers.py  test_routes.py  test_subscription_entitlement.py  test_subscription_renewer.py  test_subscription_routes.py  test_subscription_schema_state.py
